Allow directories to be a list